<?xml version="1.0" encoding="utf-8"?>
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            xmlns:tools="http://schemas.android.com/tools"
            android:orientation="vertical"
            android:padding="25dp"
            android:gravity="center"
            android:background="@drawable/p"
            tools:context=".FishActivity">

            <!-- SearchView for searching fish -->
    <SearchView
        android:id="@+id/search_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/search_view_border"
        android:queryHint="Search for fish"
        style="@style/CustomSearchViewStyle" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <!-- Fish 1 -->
                    <Button
                        android:id="@+id/button1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:background="#80000000"
                        android:text="@string/betta"
                        android:textSize="18sp"
                        android:textColor="@android:color/black" />

                    <!-- Fish 2 -->
                    <Button
                        android:id="@+id/button2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:background="#80000000"
                        android:text="@string/neon_tetra"
                        android:textSize="18sp"
                        android:textColor="@android:color/black" />

                    <!-- Fish 3 -->
                    <Button
                        android:id="@+id/button3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:background="#80000000"
                        android:text="@string/guppy"
                        android:textSize="18sp"
                        android:textColor="@android:color/black" />

                    <!-- Fish 4 -->
                    <Button
                        android:id="@+id/button4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:background="#80000000"
                        android:text="@string/angelfish"
                        android:textSize="18sp"
                        android:textColor="@android:color/black" />

                    <!-- Fish 5 -->
                    <Button
                        android:id="@+id/button5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:background="#80000000"
                        android:text="@string/molly"
                        android:textSize="18sp"
                        android:textColor="@android:color/black" />

                    <!-- Fish 6 -->
                    <Button
                        android:id="@+id/button6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:background="#80000000"
                        android:text="@string/zebra_danio"
                        android:textSize="18sp"
                        android:textColor="@android:color/black" />

                    <!-- Fish 7 -->
                    <Button
                        android:id="@+id/button7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:background="#80000000"
                        android:text="@string/swordtail"
                        android:textSize="18sp"
                        android:textColor="@android:color/black" />

                    <!-- Fish 8 -->
                    <Button
                        android:id="@+id/button8"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:background="#80000000"
                        android:text="@string/gold_fish"
                        android:textSize="18sp"
                        android:textColor="@android:color/black" />
                </LinearLayout>
            </ScrollView>
        </LinearLayout>