<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/homebg"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/top_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/uploadpick"
        android:textColor="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/image_view"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:scaleType="centerCrop"
            android:src="@drawable/logo" />

        <TextView
            android:id="@+id/aquaguardText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="28dp"
            android:layout_centerHorizontal="true"
            android:text="AQUAGUARDIAN"
            android:textColor="@color/yellow"
            android:textSize="30sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/editText"
        android:layout_width="257dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/top_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/list_of_fish"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold" />

    <ImageButton
        android:id="@+id/imageButtonn"
        android:layout_width="230dp"
        android:layout_height="230dp"
        android:layout_below="@id/editText"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:scaleType="fitStart"
        android:background="@color/black"
        android:src="@drawable/listoffish"
        tools:ignore="ContentDescription,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageButtonn"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/list_of_shop_nearby"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"/>

    <ImageButton
        android:id="@+id/imageButtonn2"
        android:layout_width="230dp"
        android:layout_height="230dp"
        android:layout_below="@id/editText2"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:background="@color/black"
        android:textColor="@color/black"
        android:scaleType="fitStart"
        android:src="@drawable/listofshop"
        tools:ignore="ContentDescription,SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/imageButtonn3"
        android:layout_width="250dp"
        android:layout_height="20dp"
        android:layout_below="@id/imageButtonn2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:scaleType="fitStart"
        android:background="#80000000"
        tools:ignore="ContentDescription,SpeakableTextPresentCheck" />

</RelativeLayout>
